# clipboard-google-translate

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: .csearchindex  client.rs  clipboard.rs  gui.rs  lib.rs  main.rs  popup.rs  window.rs
