[package]
name = "clipboard-google-translate"
version = "0.2.0"
authors = ["YoungJoo Lee <youngker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
url = "*"
hyper = "0.12.36"
clipboard = "0.5.0"
regex = "1.10.2"
serde = "1.0.193"
serde_json = "1.0.108"
serde_derive = "1.0.193"

imgui = "0.11.0"
glow = "0.12.0"
imgui-opengl-renderer = "0.12.1"
imgui-glium-renderer = "0.11.0"
imgui-winit-support = "*"
gl = "*"
log = "0.4.20"
env_logger = "0.10.1"
glutin = "0.29.1"
imgui-glow-renderer = "0.11.0"
