[package]
name = "clipboard-google-translate"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
crossbeam-channel = "0.5.0"
copypasta = "0.10.0"
env_logger = "0.10.1"
hyper = "0.12.36"
log = "0.4.20"
regex = "1.10.2"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
structopt = "0.3.26"
url = "*"
